welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:16: error: illegal start of simple expression
   }
   ^